why do I have to keep changing this???

--- a/index.html
+++ b/index.html
@@ -36,18 +36,23 @@
   <div id="content">
     <div class="nav">
       <div class="about">
-        <a href="#content" >
+        <a>
           <h3>About</h3>
         </a>
       </div>
       <div class="projects">
-        <a href="#content">
+        <a>
           <h3>Projects</h3>
         </a>
       </div>
       <div class="skills">
-        <a href="#content" >
+        <a>
           <h3>Skills</h3>
+        </a>
+      </div>
+      <div class="findjobs">
+        <a>
+          <h3>Jobs</h3>
         </a>
       </div>
       <div class="resume">
@@ -138,6 +143,10 @@
               </p>
             </a>
           </div>
+    </div>
+
+    <div class="jobes">
+      <style type='text/css'>#indJobContent{padding-top: 2em; height: 40vh;}#indJobContent .company_location{font-size: .9em;overflow: hidden;display:block;}#indJobContent.wide .job{display:block;float:left;margin-right: 5px; overflow: hidden}#indeed_widget_wrapper{ text-align: center: width:80vw; color: #202; position: relative;font-family:fantasy; font-size: .9em;font-weight: normal;line-height: 18px;padding: 10px;overflow: hidden;}#indeed_widget_header{font-size: .9em padding-bottom: 5px; }#indeed_search_wrapper{bottom: 0; clear: both;font-size: .6em;margin-top: 0px;padding-top: 2px;}#indeed_search_wrapper label{font-size: .6em;text-align: left; margin-right: 5px;}#indeed_search_wrapper input[type='text']{width: 100px; font-size: .9em; }#indeed_search_wrapper #qc{float:left;}#indeed_search_wrapper #lc{float:right;}#indeed_search_wrapper.stacked #qc, #indeed_search_wrapper.stacked #lc{float: bottom; clear: both;}#indeed_search_wrapper.stacked input[type='text']{width: 150px;}#indeed_search_wrapper.stacked label{display: block;}#indeed_search_footer{width:295px; clear: both;}#indeed_link{position: absolute;bottom: 1px;right: 5px;clear: both;font-size: .6em; }#indeed_link a{text-decoration: none;}#results .job{padding: 1px 0px;}#pagination { clear: both; }</style><style type='text/css'> #indeed_widget_wrapper{  height: 60vh; background: ;} #indeed_widget_wrapper{ border: 1px solid #DDDDDD; } #indeed_widget_wrapper, #indeed_link a{ color: ;} #indJobContent, #indeed_search_wrapper{ border-top: 1px solid #DDDDDD; } #indJobContent a { color: #ccc; } #indeed_widget_header{ color: ; } </style> <script type='text/javascript'> var ind_pub = '199069033539057'; var ind_el = 'indJobContent'; var ind_pf = ''; var ind_q = 'junior javascript html css'; var ind_l = ''; var ind_chnl = 'none'; var ind_n = 4; var ind_d = 'http://www.indeed.com'; var ind_t = 40; var ind_c = 30; var ind_pgn = 1; var ind_pgnCnt = 5; </script> <script type='text/javascript' src='http://www.indeed.com/ads/jobroll-widget-v3.js'></script> <div id='indeed_widget_wrapper' style=''> <div id='indeed_widget_header'>Jobs from Indeed</div> <div id='indJobContent' class=""></div> <div id='indeed_search_wrapper'> <script type='text/javascript'> function clearDefaults() { var formInputs = document.getElementById('indeed_jobform').elements; for(var i = 0; i < formInputs.length; i++) { if(formInputs[i].value == 'title, keywords' || formInputs[i].value == 'city, state, or zip') { formInputs[i].value = ''; } } } </script> <form onsubmit='clearDefaults();' method='get' action='http://www.indeed.com/jobs' id='indeed_jobform' target="_new"> <div id="qc"><label>What:</label><input type='text' onfocus='this.value=""' value='title, keywords' name='q' id='q'></div> <div id="lc"><label>Where:</label><input type='text' onfocus='this.value=""' value='city, state, or zip' name='l' id='l'></div> <div id='indeed_search_footer'> <div style='float:left'><input type='submit' value='Find Jobs' class='findjobs'></div> </div> <input type='hidden' name='indpubnum' id='indpubnum' value='199069033539057'> </form> </div> <div id='indeed_link'> <a title="Job Search" href="http://www.indeed.com/" target="_new">jobs by <img alt=Indeed src='http://www.indeed.com/p/jobsearch.gif' style='border: 0;vertical-align: bottom;'> </a> </div> </div>
     </div>
 
   </div>
