--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </a>
       </div> -->
       <div class="resume">
-        <a href="resume.pdf" target="_blank">
+        <a href="Christopher-Gardner.pdf" target="_blank">
           <h3>Resume</h3>
         </a>
       </div>
