--- a/index.html
+++ b/index.html
@@ -1,156 +1,148 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
-  <title>CTG</title>
-  <link rel="icon" href="./images/myFACE.jpg">
-  <script   src="jquery-2.2.4.min.js" ></script>
-    <link rel="stylesheet" href="stylo.css">
+<title>CTG</title>
+<link rel="icon" href="./images/myFACE.jpg">
+<script   src="jquery-2.2.4.min.js" ></script>
+<link rel="stylesheet" href="stylo.css">
 </head>
 <body>
-  <div id="face">
-      <h1 >Christopher T. Gardner</h1>
-      <h3>Full-Stack Developer</h3>
-      <div class="contact">
-        <div class="git">
-          <a target="_blank" href="https://github.com/gardner589">
-            <img src="./images/github-logo.png" alt="github" />
-          </a>
-        </div>
-        <div class="linkd">
-          <a target="_blank" href="https://www.linkedin.com/in/christophertgardner">
-            <img src="./images/linkedin.png" alt="linkdin" />
-          </a>
-        </div>
-        <div class="tweetr">
-          <a target="_blank" href="https://twitter.com/lordshirc">
-            <img src="./images/twitter.png" alt="twit" />
-          </a>
-        </div>
-        <div class="twitch">
-          <a href="https://www.twitch.tv/lord_shirc">
-            <img src="./images/twitch.png" alt="twitch" />
-          </a>
-        </div>
-      </div>
-  </div>
-  <div id="content">
-    <div class="nav">
-      <div class="about">
-        <a>
-          <h3>About</h3>
-        </a>
-      </div>
-      <div class="projects">
-        <a>
-          <h3>Projects</h3>
-        </a>
-      </div>
-      <div class="skills">
-        <a>
-          <h3>Skills</h3>
-        </a>
-      </div>
-      <!-- <div class="findjobs">
-        <a>
-          <h3>Jobs</h3>
-        </a>
-      </div> -->
-      <div class="resume">
-        <a href="Christopher-Gardner.pdf" target="_blank">
-          <h3>Resume</h3>
-        </a>
-      </div>
-    </div>
-    <div id="about-show">
-      <img id="myFace" src="./images/myFACE.jpg" alt="My picure of my face"/>
-      <p>
-          I am a creative and patient problem solver with a track record of success in diverse environments for over 10 years. I'm fascinated by how things work and I look forward to discovering how new languages, technologies, frameworks, and stacks work when utilized to solve problems.
-        </p>
-    </div>
+<div id="face">
+<h1 >Christopher T. Gardner</h1>
+<h3>Full-Stack Developer</h3>
+<div class="contact">
+<div class="git">
+<a target="_blank" href="https://github.com/gardner589">
+<img src="./images/github-logo.png" alt="github" />
+</a>
+</div>
+<div class="linkd">
+<a target="_blank" href="https://www.linkedin.com/in/christophertgardner">
+<img src="./images/linkedin.png" alt="linkdin" />
+</a>
+</div>
+<div class="tweetr">
+<a target="_blank" href="https://twitter.com/lordshirc">
+<img src="./images/twitter.png" alt="twit" />
+</a>
+</div>
+<div class="twitch">
+<a href="https://www.twitch.tv/lord_shirc">
+<img src="./images/twitch.png" alt="twitch" />
+</a>
+</div>
+</div>
+</div>
+<div id="content">
+<div class="nav">
+<div class="about">
+<a>
+<h3>About</h3>
+</a>
+</div>
+<div class="projects">
+<a>
+<h3>Projects</h3>
+</a>
+</div>
+<div class="skills">
+<a>
+<h3>Skills</h3>
+</a>
+</div>
 
-    <div class="skillz">
-      <img src="./images/AJAX.png"/>
-      <img src="./images/AngularJS.png"/>
-      <img src="./images/bash-icon.png"/>
-      <img src="./images/bootstrap.png"/>
-      <img src="./images/CSS3.png"/>
-      <img src="./images/express.png"/>
-      <img src="./images/github.png"/>
-      <img src="./images/HTML5.png"/>
-      <img src="./images/Jasmine.svg"/>
-      <img src="./images/Jquery.png"/>
-      <img src="./images/JS.png"/>
-      <img src="./images/json-logo.png"/>
-      <img src="./images/MongoDB.png"/>
-      <img src="./images/Node.png"/>
-      <img src="./images/php.png"/>
-      <img src="./images/postgresql.png"/>
-      <img src="./images/Rails.png"/>
-      <img src="./images/React.png"/>
-      <img src="./images/rspec.png"/>
-      <img src="./images/selenium.png"/>
-      <img src="./images/wordpress.png"/>
-    </div>
+<div class="resume">
+<a href="Christopher-Gardner.pdf" target="_blank">
+<h3>Resume</h3>
+</a>
+</div>
+</div>
+<div id="about-show">
+<img id="myFace" src="./images/myFACE.jpg" alt="My picure of my face"/>
+<p>
+I am a creative and patient problem solver with a track record of success in diverse environments for over 10 years. I'm fascinated by how things work and I look forward to discovering how new languages, technologies, frameworks, and stacks work when utilized to solve problems.
+</p>
+</div>
 
-    <div id="projects">
-      <div class="clc">
-        <a target="_blank" href="http://chrislovescombos.herokuapp.com/">
-          <h4>Chris Loves Combos</h4>
-          <img src="./images/combolove.png" alt="combolove" />
-          <p>This is a WordPress blog I made and deployed to Heroku, which was very challenging.</p>
-        </a>
-      </div>
-      <div class="jamz">
-        <a target="_blank" href="https://ctg-jamz.firebaseapp.com/">
-          <h4>CTG Jamz</h4>
-          <img src="./images/jamz.png" alt="jamz" />
-          <p>
-            This is a FireBase app built with AngularJS. Upload songs or just listen to the songs that are there.
-          </p>
-        </a>
-      </div>
-          <div class="memory">
-            <a target="_blank" href="http://gardner589.github.io/ProjectOne/">
-              <h4>M v.C Memory</h4>
-              <img src="./images/memory.png" alt="MvC-memory" />
-              <p>
-                A concentration game with a classic Marvel vs. Capcom theme.
-              </p>
-            </a>
-          </div>
-          <div class="ghost">
-            <a target="_blank" href="http://gardner589.github.io/Ghost">
-              <h4>Ghost</h4>
-              <img src="./images/ghost.png" alt="ghost" />
-              <p>Play against the computer. Spell a word, one letter at a time, alternating turns. Words have to be 5 or more letters. Player with last letter loses.              </p>
-            </a>
-          </div>
-          <div  class="skillsBook">
-            <a target="_blank" href="https://skillz-book.herokuapp.com/skills">
-              <h4>SkillsBook</h4>
-              <img src="./images/skillsBook.png" alt="skillsbook" />
-              <p>
-                A Rails application with basic CRUD actions, that lets users upload videos of their favorite skills.
-              </p>
-            </a>
-          </div>
-          <div class="congreddit">
-            <a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/">
-              <h4>Congreddit</h4>
-              <img src="./images/congreddit.png" alt="congreddit" />
-              <p>
-                Congreddit is an app where users can see the voting history of different legislators.
-              </p>
-            </a>
-          </div>
-    </div>
+<div class="skillz">
+<img src="./images/AJAX.png"/>
+<img src="./images/AngularJS.png"/>
+<img src="./images/bash-icon.png"/>
+<img src="./images/bootstrap.png"/>
+<img src="./images/CSS3.png"/>
+<img src="./images/express.png"/>
+<img src="./images/github.png"/>
+<img src="./images/HTML5.png"/>
+<img src="./images/Jasmine.svg"/>
+<img src="./images/Jquery.png"/>
+<img src="./images/JS.png"/>
+<img src="./images/json-logo.png"/>
+<img src="./images/MongoDB.png"/>
+<img src="./images/Node.png"/>
+<img src="./images/php.png"/>
+<img src="./images/postgresql.png"/>
+<img src="./images/Rails.png"/>
+<img src="./images/React.png"/>
+<img src="./images/rspec.png"/>
+<img src="./images/selenium.png"/>
+<img src="./images/wordpress.png"/>
+</div>
 
-    <!-- <div class="jobes">
-      <style type='text/css'>#indJobContent{padding-top: 2em; height: 40vh;}#indJobContent .company_location{font-size: .9em;overflow: hidden;display:block;}#indJobContent.wide .job{display:block;float:left;margin-right: 5px; overflow: hidden}#indeed_widget_wrapper{ text-align: center: width:80vw; color: #202; position: relative;font-family:fantasy; font-size: .9em;font-weight: normal;line-height: 18px;padding: 10px;overflow: hidden;}#indeed_widget_header{font-size: .9em padding-bottom: 5px; }#indeed_search_wrapper{bottom: 0; clear: both;font-size: .6em;margin-top: 0px;padding-top: 2px;}#indeed_search_wrapper label{font-size: .6em;text-align: left; margin-right: 5px;}#indeed_search_wrapper input[type='text']{width: 100px; font-size: .9em; }#indeed_search_wrapper #qc{float:left;}#indeed_search_wrapper #lc{float:right;}#indeed_search_wrapper.stacked #qc, #indeed_search_wrapper.stacked #lc{float: bottom; clear: both;}#indeed_search_wrapper.stacked input[type='text']{width: 150px;}#indeed_search_wrapper.stacked label{display: block;}#indeed_search_footer{width:295px; clear: both;}#indeed_link{position: absolute;bottom: 1px;right: 5px;clear: both;font-size: .6em; }#indeed_link a{text-decoration: none;}#results .job{padding: 1px 0px;}#pagination { clear: both; }</style><style type='text/css'> #indeed_widget_wrapper{  height: 60vh; background: ;} #indeed_widget_wrapper{ border: 1px solid #DDDDDD; } #indeed_widget_wrapper, #indeed_link a{ color: ;} #indJobContent, #indeed_search_wrapper{ border-top: 1px solid #DDDDDD; } #indJobContent a { color: #ccc; } #indeed_widget_header{ color: ; } </style> <script type='text/javascript'> var ind_pub = '199069033539057'; var ind_el = 'indJobContent'; var ind_pf = ''; var ind_q = 'junior javascript html css'; var ind_l = ''; var ind_chnl = 'none'; var ind_n = 4; var ind_d = 'http://www.indeed.com'; var ind_t = 40; var ind_c = 30; var ind_pgn = 1; var ind_pgnCnt = 5; </script> <script type='text/javascript' src='http://www.indeed.com/ads/jobroll-widget-v3.js'></script> <div id='indeed_widget_wrapper' style=''> <div id='indeed_widget_header'>Jobs from Indeed</div> <div id='indJobContent' class=""></div> <div id='indeed_search_wrapper'> <script type='text/javascript'> function clearDefaults() { var formInputs = document.getElementById('indeed_jobform').elements; for(var i = 0; i < formInputs.length; i++) { if(formInputs[i].value == 'title, keywords' || formInputs[i].value == 'city, state, or zip') { formInputs[i].value = ''; } } } </script> <form onsubmit='clearDefaults();' method='get' action='http://www.indeed.com/jobs' id='indeed_jobform' target="_new"> <div id="qc"><label>What:</label><input type='text' onfocus='this.value=""' value='title, keywords' name='q' id='q'></div> <div id="lc"><label>Where:</label><input type='text' onfocus='this.value=""' value='city, state, or zip' name='l' id='l'></div> <div id='indeed_search_footer'> <div style='float:left'><input type='submit' value='Find Jobs' class='findjobs'></div> </div> <input type='hidden' name='indpubnum' id='indpubnum' value='199069033539057'> </form> </div> <div id='indeed_link'> <a title="Job Search" href="http://www.indeed.com/" target="_new">jobs by <img alt=Indeed src='http://www.indeed.com/p/jobsearch.gif' style='border: 0;vertical-align: bottom;'> </a> </div> </div>
-    </div> -->
+<div id="projects">
+<div class="clc">
+<a target="_blank" href="http://chrislovescombos.herokuapp.com/">
+<h4>Chris Loves Combos</h4>
+<img src="./images/combolove.png" alt="combolove" />
+<p>This is a WordPress blog I made and deployed to Heroku, which was very challenging.</p>
+</a>
+</div>
+<div class="jamz">
+<a target="_blank" href="https://ctg-jamz.firebaseapp.com/">
+<h4>CTG Jamz</h4>
+<img src="./images/jamz.png" alt="jamz" />
+<p>
+This is a FireBase app built with AngularJS. Upload songs or just listen to the songs that are there.
+</p>
+</a>
+</div>
+<div class="memory">
+<a target="_blank" href="http://gardner589.github.io/ProjectOne/">
+<h4>M v.C Memory</h4>
+<img src="./images/memory.png" alt="MvC-memory" />
+<p>
+A concentration game with a classic Marvel vs. Capcom theme.
+</p>
+</a>
+</div>
+<div class="ghost">
+<a target="_blank" href="http://gardner589.github.io/Ghost">
+<h4>Ghost</h4>
+<img src="./images/ghost.png" alt="ghost" />
+<p>Play against the computer. Spell a word, one letter at a time, alternating turns. Words have to be 5 or more letters. Player with last letter loses.              </p>
+</a>
+</div>
+<div  class="skillsBook">
+<a target="_blank" href="https://skillz-book.herokuapp.com/skills">
+<h4>SkillsBook</h4>
+<img src="./images/skillsBook.png" alt="skillsbook" />
+<p>
+A Rails application with basic CRUD actions, that lets users upload videos of their favorite skills.
+</p>
+</a>
+</div>
+<div class="congreddit">
+<a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/">
+<h4>Congreddit</h4>
+<img src="./images/congreddit.png" alt="congreddit" />
+<p>
+Congreddit is an app where users can see the voting history of different legislators.
+</p>
+</a>
+</div>
+</div>
 
-  </div>
+</div>
 
 <script src="script.js"></script>
 </body>
-</html>
+</html> -->
