--- a/index.html
+++ b/index.html
@@ -146,3 +146,21 @@ Congreddit is an app where users can see the voting history of different legisla
 <script src="script.js"></script>
 </body>
 </html> -->
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="shortcut icon" type="image/x-icon" href="./images/taurus.svg" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
+    <link rel="stylesheet" href="stylo.css">
+
+    <title>Coming Soon</title>
+  </head>
+  <body>
+    <div id="anchor"></div>
+
+    <script src="./js/compiled/main.min.js" charset="utf-8"></script>
+  </body>
+</html>
