--- a/index.html
+++ b/index.html
@@ -155,12 +155,21 @@ Congreddit is an app where users can see the voting history of different legisla
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
     <link rel="stylesheet" href="stylo.css">
+    <script src="http://ec2-3-229-154-153.compute-1.amazonaws.com/js/particles.js" charset="utf-8"></script>
 
     <title>Coming Soon</title>
   </head>
-  <body>
+  <body id="main">
     <div id="anchor"></div>
+    <img src="./images/taurus.svg" alt="taurus icon" style="position:absolute;">
 
     <script src="./js/compiled/main.min.js" charset="utf-8"></script>
+    <script type="text/javascript">
+        setTimeout( () => {
+            particlesJS.load('main', 'http://ec2-3-229-154-153.compute-1.amazonaws.com/js/pjs-config2.json', function() {
+                console.log('callback - particles.js config loaded');
+            });
+        }, 1300)
+    </script>
   </body>
 </html>
