--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@ Congreddit is an app where users can see the voting history of different legisla
   </head>
   <body id="main">
     <div id="anchor"></div>
-    <img src="./images/taurus.svg" alt="taurus icon" style="position:absolute;">
+    <img src="./images/taurus.svg" alt="taurus icon" style="position:absolute;width:50%;border-radius:50%;">
 
     <script src="./js/compiled/main.min.js" charset="utf-8"></script>
     <script type="text/javascript">
         setTimeout( () => {
-            particlesJS.load('main', 'http://ec2-3-229-154-153.compute-1.amazonaws.com/js/pjs-config2.json', function() {
+            particlesJS.load('main', 'http://localhost:1337/js/pjs-config2.json', function() {
                 console.log('callback - particles.js config loaded');
             });
         }, 1300)
