--- a/index.html
+++ b/index.html
@@ -1,150 +1,150 @@
 <!-- <!DOCTYPE html>
 <html>
-<head>
-<title>CTG</title>
-<link rel="icon" href="./images/myFACE.jpg">
-<script   src="jquery-2.2.4.min.js" ></script>
-<link rel="stylesheet" href="stylo.css">
-</head>
-<body>
-<div id="face">
-<h1 >Christopher T. Gardner</h1>
-<h3>Full-Stack Developer</h3>
-<div class="contact">
-<div class="git">
-<a target="_blank" href="https://github.com/gardner589">
-<img src="./images/github-logo.png" alt="github" />
-</a>
-</div>
-<div class="linkd">
-<a target="_blank" href="https://www.linkedin.com/in/christophertgardner">
-<img src="./images/linkedin.png" alt="linkdin" />
-</a>
-</div>
-<div class="tweetr">
-<a target="_blank" href="https://twitter.com/lordshirc">
-<img src="./images/twitter.png" alt="twit" />
-</a>
-</div>
-<div class="twitch">
-<a href="https://www.twitch.tv/lord_shirc">
-<img src="./images/twitch.png" alt="twitch" />
-</a>
-</div>
-</div>
-</div>
-<div id="content">
-<div class="nav">
-<div class="about">
-<a>
-<h3>About</h3>
-</a>
-</div>
-<div class="projects">
-<a>
-<h3>Projects</h3>
-</a>
-</div>
-<div class="skills">
-<a>
-<h3>Skills</h3>
-</a>
-</div>
+    <head>
+        <title>CTG</title>
+        <link rel="icon" href="./images/myFACE.jpg">
+        <script   src="jquery-2.2.4.min.js" ></script>
+        <link rel="stylesheet" href="stylo.css">
+    </head>
+    <body>
+        <div id="face">
+            <h1 >Christopher T. Gardner</h1>
+            <h3>Full-Stack Developer</h3>
+            <div class="contact">
+                <div class="git">
+                    <a target="_blank" href="https://github.com/gardner589">
+                        <img src="./images/github-logo.png" alt="github" />
+                    </a>
+                </div>
+                <div class="linkd">
+                    <a target="_blank" href="https://www.linkedin.com/in/christophertgardner">
+                        <img src="./images/linkedin.png" alt="linkdin" />
+                    </a>
+                </div>
+                <div class="tweetr">
+                    <a target="_blank" href="https://twitter.com/lordshirc">
+                        <img src="./images/twitter.png" alt="twit" />
+                    </a>
+                </div>
+                <div class="twitch">
+                    <a href="https://www.twitch.tv/lord_shirc">
+                        <img src="./images/twitch.png" alt="twitch" />
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div id="content">
+            <div class="nav">
+                <div class="about">
+                    <a>
+                        <h3>About</h3>
+                    </a>
+                </div>
+                <div class="projects">
+                    <a>
+                        <h3>Projects</h3>
+                    </a>
+                </div>
+                <div class="skills">
+                    <a>
+                        <h3>Skills</h3>
+                    </a>
+                </div>
 
-<div class="resume">
-<a href="Christopher-Gardner.pdf" target="_blank">
-<h3>Resume</h3>
-</a>
-</div>
-</div>
-<div id="about-show">
-<img id="myFace" src="./images/myFACE.jpg" alt="My picure of my face"/>
-<p>
-I am a creative and patient problem solver with a track record of success in diverse environments for over 10 years. I'm fascinated by how things work and I look forward to discovering how new languages, technologies, frameworks, and stacks work when utilized to solve problems.
-</p>
-</div>
+                <div class="resume">
+                    <a href="Christopher-Gardner.pdf" target="_blank">
+                        <h3>Resume</h3>
+                    </a>
+                </div>
+            </div>
+            <div id="about-show">
+                <img id="myFace" src="./images/myFACE.jpg" alt="My picure of my face"/>
+                <p>
+                    I am a creative and patient problem solver with a track record of success in diverse environments for over 10 years. I'm fascinated by how things work and I look forward to discovering how new languages, technologies, frameworks, and stacks work when utilized to solve problems.
+                </p>
+            </div>
 
-<div class="skillz">
-<img src="./images/AJAX.png"/>
-<img src="./images/AngularJS.png"/>
-<img src="./images/bash-icon.png"/>
-<img src="./images/bootstrap.png"/>
-<img src="./images/CSS3.png"/>
-<img src="./images/express.png"/>
-<img src="./images/github.png"/>
-<img src="./images/HTML5.png"/>
-<img src="./images/Jasmine.svg"/>
-<img src="./images/Jquery.png"/>
-<img src="./images/JS.png"/>
-<img src="./images/json-logo.png"/>
-<img src="./images/MongoDB.png"/>
-<img src="./images/Node.png"/>
-<img src="./images/php.png"/>
-<img src="./images/postgresql.png"/>
-<img src="./images/Rails.png"/>
-<img src="./images/React.png"/>
-<img src="./images/rspec.png"/>
-<img src="./images/selenium.png"/>
-<img src="./images/wordpress.png"/>
-</div>
+            <div class="skillz">
+                <img src="./images/AJAX.png"/>
+                <img src="./images/AngularJS.png"/>
+                <img src="./images/bash-icon.png"/>
+                <img src="./images/bootstrap.png"/>
+                <img src="./images/CSS3.png"/>
+                <img src="./images/express.png"/>
+                <img src="./images/github.png"/>
+                <img src="./images/HTML5.png"/>
+                <img src="./images/Jasmine.svg"/>
+                <img src="./images/Jquery.png"/>
+                <img src="./images/JS.png"/>
+                <img src="./images/json-logo.png"/>
+                <img src="./images/MongoDB.png"/>
+                <img src="./images/Node.png"/>
+                <img src="./images/php.png"/>
+                <img src="./images/postgresql.png"/>
+                <img src="./images/Rails.png"/>
+                <img src="./images/React.png"/>
+                <img src="./images/rspec.png"/>
+                <img src="./images/selenium.png"/>
+                <img src="./images/wordpress.png"/>
+            </div>
 
-<div id="projects">
-<div class="clc">
-<a target="_blank" href="http://chrislovescombos.herokuapp.com/">
-<h4>Chris Loves Combos</h4>
-<img src="./images/combolove.png" alt="combolove" />
-<p>This is a WordPress blog I made and deployed to Heroku, which was very challenging.</p>
-</a>
-</div>
-<div class="jamz">
-<a target="_blank" href="https://ctg-jamz.firebaseapp.com/">
-<h4>CTG Jamz</h4>
-<img src="./images/jamz.png" alt="jamz" />
-<p>
-This is a FireBase app built with AngularJS. Upload songs or just listen to the songs that are there.
-</p>
-</a>
-</div>
-<div class="memory">
-<a target="_blank" href="http://gardner589.github.io/ProjectOne/">
-<h4>M v.C Memory</h4>
-<img src="./images/memory.png" alt="MvC-memory" />
-<p>
-A concentration game with a classic Marvel vs. Capcom theme.
-</p>
-</a>
-</div>
-<div class="ghost">
-<a target="_blank" href="http://gardner589.github.io/Ghost">
-<h4>Ghost</h4>
-<img src="./images/ghost.png" alt="ghost" />
-<p>Play against the computer. Spell a word, one letter at a time, alternating turns. Words have to be 5 or more letters. Player with last letter loses.              </p>
-</a>
-</div>
-<div  class="skillsBook">
-<a target="_blank" href="https://skillz-book.herokuapp.com/skills">
-<h4>SkillsBook</h4>
-<img src="./images/skillsBook.png" alt="skillsbook" />
-<p>
-A Rails application with basic CRUD actions, that lets users upload videos of their favorite skills.
-</p>
-</a>
-</div>
-<div class="congreddit">
-<a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/">
-<h4>Congreddit</h4>
-<img src="./images/congreddit.png" alt="congreddit" />
-<p>
-Congreddit is an app where users can see the voting history of different legislators.
-</p>
-</a>
-</div>
-</div>
+            <div id="projects">
+                <div class="clc">
+                    <a target="_blank" href="http://chrislovescombos.herokuapp.com/">
+                        <h4>Chris Loves Combos</h4>
+                        <img src="./images/combolove.png" alt="combolove" />
+                        <p>This is a WordPress blog I made and deployed to Heroku, which was very challenging.</p>
+                    </a>
+                </div>
+                <div class="jamz">
+                    <a target="_blank" href="https://ctg-jamz.firebaseapp.com/">
+                        <h4>CTG Jamz</h4>
+                        <img src="./images/jamz.png" alt="jamz" />
+                        <p>
+                            This is a FireBase app built with AngularJS. Upload songs or just listen to the songs that are there.
+                        </p>
+                    </a>
+                </div>
+                <div class="memory">
+                    <a target="_blank" href="http://gardner589.github.io/ProjectOne/">
+                        <h4>M v.C Memory</h4>
+                        <img src="./images/memory.png" alt="MvC-memory" />
+                        <p>
+                            A concentration game with a classic Marvel vs. Capcom theme.
+                        </p>
+                    </a>
+                </div>
+                <div class="ghost">
+                    <a target="_blank" href="http://gardner589.github.io/Ghost">
+                        <h4>Ghost</h4>
+                        <img src="./images/ghost.png" alt="ghost" />
+                        <p>Play against the computer. Spell a word, one letter at a time, alternating turns. Words have to be 5 or more letters. Player with last letter loses.              </p>
+                    </a>
+                </div>
+                <div  class="skillsBook">
+                    <a target="_blank" href="https://skillz-book.herokuapp.com/skills">
+                        <h4>SkillsBook</h4>
+                        <img src="./images/skillsBook.png" alt="skillsbook" />
+                        <p>
+                            A Rails application with basic CRUD actions, that lets users upload videos of their favorite skills.
+                        </p>
+                    </a>
+                </div>
+                <div class="congreddit">
+                    <a target="_blank" href="https://gardner589.github.io/congreddit_angular_rebuild/#/">
+                        <h4>Congreddit</h4>
+                        <img src="./images/congreddit.png" alt="congreddit" />
+                        <p>
+                            Congreddit is an app where users can see the voting history of different legislators.
+                        </p>
+                    </a>
+                </div>
+            </div>
 
-</div>
+        </div>
 
-<script src="script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
 </html> -->
 
 <!DOCTYPE html>
@@ -155,12 +155,14 @@ Congreddit is an app where users can see the voting history of different legisla
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
     <link rel="stylesheet" href="stylo.css">
-    <script src="./particles.js" charset="utf-8"></script>
+    <script src="jquery-2.2.4.min.js"></script>
+    <script src="./particles.js"></script>
 
     <title>Coming Soon</title>
   </head>
   <body id="main">
-    <div id="anchor"></div>
     <img src="./images/taurus.svg" alt="taurus icon" style="position:absolute;width:50%;border-radius:50%;">
+
+    <script src="./script.js"></script>
   </body>
 </html>
