--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <title>Coming Soon</title>
   </head>
   <body id="main">
-    <img src="./images/taurus.svg" alt="taurus icon" style="position:absolute;width:50%;border-radius:50%;">
+    <img src="./images/taurus.svg" alt="taurus icon">
 
     <script src="./script.js"></script>
   </body>
